--- a/src/components/block-gallery/styles/style/_lightbox.scss
+++ b/src/components/block-gallery/styles/style/_lightbox.scss
@@ -22,12 +22,12 @@
 .coblocks-lightbox__background {
 	background-repeat: no-repeat;
 	background-size: cover;
-	bottom: -2em;
-	filter: blur(20px) saturate(150%) brightness(75%);
-	left: -2em;
+	bottom: -10em;
+	filter: blur(25px) saturate(175%) brightness(90%);
+	left: -10em;
 	position: absolute;
-	right: -2em;
-	top: -2em;
+	right: -10em;
+	top: -10em;
 }
 
 .coblocks-lightbox__heading {
@@ -70,7 +70,7 @@
 	display: flex;
 	height: auto;
 	margin: 0 1%;
-	padding: 0.7em;
+	padding: 15px;
 	position: absolute;
 	right: 0;
 	top: 50%;
@@ -79,34 +79,33 @@
 	z-index: 3;
 
 	&:hover {
-		background-color: rgba(255, 255, 255, 0.1);
+		background-color: rgba(255, 255, 255, 0.15);
 	}
 
 	&:focus {
-		background-color: rgba(255, 255, 255, 0.2);
-		box-shadow: inset 0 0 0 1px $white;
+		background-color: rgba(255, 255, 255, 0.25);
+		box-shadow: inset 0 0 0 3px rgba(255, 255, 255, 0.25);
 		outline: none;
 	}
 
 	@include break-small() {
-		background-color: rgba(255, 255, 255, 0.1);
+		background-color: rgba(255, 255, 255, 0.15);
 		margin: 0 2%;
 
 		&:hover {
-			background-color: rgba(255, 255, 255, 0.2);
+			background-color: rgba(255, 255, 255, 0.25);
 		}
 	}
 
 	> div {
 		background-color: $white;
-		height: 1.15em;
+		height: 28px;
 		position: relative;
-		transition: 150ms transform linear;
-		width: 1.15em;
+		width: 28px;
 
 		@include break-large() {
-			height: 1.5em;
-			width: 1.5em;
+			height: 32px;
+			width: 32px;
 		}
 	}
 
@@ -130,13 +129,17 @@
 	background-color: $white;
 	background-repeat: no-repeat;
 	cursor: pointer;
-	height: 2.5em;
+	height: 26px;
 	mask-image: url(images/lightbox/close.svg);
 	mask-size: contain;
-	padding: 0.5em;
-	padding: 0;
+	padding: 7px;
 	transition: transform 0.15s linear;
-	width: 2.5em;
+	width: 26px;
+
+	@include break-large() {
+		height: 32px;
+		width: 32px;
+	}
 
 	&:hover {
 		background-color: $white;
