--- a/src/blocks/gallery-carousel/styles/style.scss
+++ b/src/blocks/gallery-carousel/styles/style.scss
@@ -1,77 +1,72 @@
 .wp-block-coblocks-gallery-carousel {
-  &,
-  .coblocks-gallery {
-    height: 100%;
-    position: relative;
-  }
+	&,
+	.coblocks-gallery {
+		height: 100%;
+		position: relative;
+	}
 
-  .coblocks-gallery--figure {
-    height: 100%;
-  }
+	.coblocks-gallery--figure {
+		height: 100%;
+	}
 
-  @for $i from 2 through 20 {
+	@for $i from 2 through 20 {
+		.carousel-nav.has-border-radius-#{ $i } {
+			img {
+				border-radius: #{$i}px;
+			}
+		}
+	}
 
-    .carousel-nav.has-border-radius-#{ $i } {
+	.carousel-nav {
+		height: auto;
+		margin: 5px auto 0;
 
-      img {
-        border-radius: #{ $i }px;
-      }
-    }
-  }
+		.flickity-viewport {
+			height: 80px !important;
+			margin-left: 0;
+			margin-right: 0;
+		}
 
-  .carousel-nav {
-    height: auto;
-    width: 1280px;
-    margin: 0 auto !important;
+		.blockgallery-figure {
+			height: 100%;
+			width: 100%;
+		}
 
-    .flickity-viewport {
-      height: 80px !important;
-      margin-left: 0;
-      margin-right: 0;
-    }
+		.blockgallery--item-thumbnail {
+			height: 80px;
+			opacity: 0.4;
+			transition: opacity 350ms ease;
+			width: 100px;
 
-    .blockgallery-figure {
-      width: 100%;
-      height: 100%;
-    }
+			&.is-selected {
+				opacity: 1;
+			}
+		}
+	}
 
-    .blockgallery--item-thumbnail {
-      height: 80px;
-      width: 100px;
-      opacity: 0.4;
-      transition: opacity 350ms ease;
-
-      &.is-selected {
-        opacity: 1;
-      }
-    }
-  }
+	.blockgallery--figure {
+		margin-right: 5px;
+	}
 }
 
 .editor-block-list__block-edit {
-
-  .carousel-nav {
-    width: 100% !important;
-    margin: 3px -3px !important;
-  }
+	.carousel-nav {
+		margin: 3px -3px !important;
+		width: 100% !important;
+	}
 }
 
 .responsive-height {
-  .has-carousel {
-    height: auto !important;
-    padding-bottom: 56.25%;
-    position: relative;
+	.has-carousel {
+		height: auto !important;
+		padding-bottom: 56.25%;
+		position: relative;
 
-    .flickity-viewport {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-    }
-  }
-}
-
-.blockgallery--figure {
-  margin-left: 3px;
-  margin-right: 3px;
+		.flickity-viewport {
+			left: 0;
+			position: absolute;
+			top: 0;
+			width: 100%;
+		}
+	}
 }
